# Arkalia-luna-logo

./: .gitignore  CHANGELOG.md  Dockerfile.prod  Dockerfile.test  GITHUB_READY.md  GITHUB_SETUP.md  Makefile  README.md  REFACTORING_SUMMARY.md  bandit-report.json  docker-compose.prod.yml  main.py  pyproject.toml  pyproject.toml.backup  reddit-post-content.md  requirements.txt  security-report.json  test_pr_title_validation.sh
.devcontainer/: codespaces.md  devcontainer.json
.github/: BRANCHES.md  DEPLOYMENT.md  actions.yml  dependabot.yml  discussions.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: branch-protection.yml  ci.yml  deploy.yml  load-test.yml
config/: .pre-commit-config.yaml  README.md  production.py  pyproject.toml  pytest.ini
demos/: api-client.html  demo-ai-moon.html  demo-dashboard.html  demo-final.html  demo-phase2-interactive.html  demo-simple-advanced.html  demo-ultra-max.html  demo.html
docs/: API.md  ARCHITECTURE.md  CI-README.md  CONTRIBUTING.md  INDEX.md  PHASE2_PROGRESS.md  PHASE2_UX_EXCEPTIONNELLE.md  PHASE3_PRODUCTION.md  QUICKSTART.md  README.md  ROADMAP_PROGRESS.md  ROADMAP_SUMMARY.md  checklist-midjourney.md  workflow-next-steps.md
docs/briefs/: creative-brief.md  midjourney-prompts.md
exports/demo-gif/: file_list.txt  generated_logos.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: arkalia-overview.json
nginx/: nginx.conf
performance/: artillery.yml
scripts/: create_animated_gif.py  generate_demo_logos.py  generate_emotional_logos.py  generate_screenshots.py  install_comfyui.sh  setup-github.sh
src/: __init__.py  advanced_logo_generator.py  ai_logo_generator.py  ai_moon_generator.py  cli.py  cosmic_logo_generator.py  cosmic_sphere_builder.py  dashboard_generator.py  generator_factory.py  hyper_ai_generator.py  logo_generator.py  realism_max_generator.py  simple_advanced_generator.py  svg_builder.py  svg_builder_advanced.py  svg_builder_ai_moon.py  svg_builder_base.py  svg_builder_dashboard.py  svg_builder_realism_max.py  svg_builder_simple_advanced.py  svg_builder_ultimate.py  svg_builder_ultra_max.py  ultimate_generator.py  ultra_max_generator.py  variants.py
tests/: __init__.py  conftest.py  test_advanced.py  test_ai_moon.py  test_all_generators.py  test_benchmark.py  test_cli.py  test_cli_coverage.py  test_cli_coverage_extended.py  test_dashboard.py  test_generator_factory_coverage.py  test_logo_generator_coverage.py  test_realism_max_coverage.py  test_realism_max_generator.py  test_realism_max_generator_coverage.py  test_simple_advanced.py  test_svg_builder_ultimate_coverage.py  test_svg_builders.py  test_ultimate_generator.py  test_ultimate_generator_coverage.py  test_ultra_max.py  test_ultra_max_simple.py  test_variants.py
tools/: activate_env.sh  arkalia-luna-logo.py  clean_build.sh
tools/converters/: convert_svg_to_png.py  simple_convert.py
tools/demos/: demo-realism-max.html  demo-ultimate-fixed.html  demo-ultimate.html
